<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
   android:background="#77761B"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:src="@mipmap/ic_launcher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvAnswer"
        android:text="@string/questionDeclaration"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:padding="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="34dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button

            android:id="@+id/btnTrue"
            android:text="@string/tru"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>



        <Button

            android:id="@+id/btnFalse"
            android:text="@string/falseText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>



    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageButton
            android:contentDescription="@string/previous"
            android:id="@+id/btnPrev"
            android:src="@drawable/baseline_keyboard_arrow_left_white_18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>



        <ImageButton
            android:contentDescription="@string/next"
            android:id="@+id/btnNext"
            android:src="@drawable/outline_keyboard_arrow_right_white_18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </LinearLayout>



</LinearLayout>